Remove weird layout issue when there are too few images.

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -6,7 +6,6 @@ html, body {
 .container {
   margin: 0;
   padding: 0;
-  min-height: 400px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
